<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      >

    <item android:id="@+id/action_time"
          android:title="@string/action_count_days"
          android:icon="@drawable/ic_access_time_white_24dp"
          android:orderInCategory="1"
          app:showAsAction="always" />

    <item android:id="@+id/action_table"
          android:title="@string/action_table_days"
          android:icon="@drawable/ic_view_list_white_24dp"
          android:orderInCategory="3"
          app:showAsAction="always" />

    <item android:id="@+id/action_joint"
          android:title="@string/action_create_joint"
          android:icon="@drawable/ic_joint"
          android:orderInCategory="10"
          app:showAsAction="always" />

    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="150"
          app:showAsAction="never" />

    <item android:id="@+id/action_help_bioritm"
          android:title="@string/Help"
          android:orderInCategory="200"
          app:showAsAction="never" />
</menu>

<!--
<item android:id="@+id/action_share"
      android:title="@string/action_share"
      android:orderInCategory="150"
      app:showAsAction="never"
      app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>-->
