<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
     >

    <item
        android:id="@+id/action_find_dates"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orderInCategory="10"
        android:title="@string/action_find_dates"
        android:icon="@drawable/ic_action_find_avto"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        android:orderInCategory="15"
        app:showAsAction="never"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>

    <item
        android:id="@+id/action_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item android:id="@+id/action_help_joint"
          android:title="@string/Help"
          android:orderInCategory="200"
          app:showAsAction="never" />
</menu>