<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_oneDate"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="Личные даты"/>

        <item
            android:id="@+id/nav_twoDate"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="Совместные даты"/>

        <item
            android:id="@+id/nav_bio"
            android:icon="@drawable/ic_timeline_black_24dp"
            android:title="Биоритмы"/>

        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/Tools"/>

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/Help"/>

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/Share"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_thumb_up_black_24dp"
                android:title="@string/Send"/>
        </menu>
    </item>

</menu>
