<menu xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item android:id="@+id/action_share"
          android:title="@string/action_share"
          android:orderInCategory="5"
          app:showAsAction="never"
          app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>

<item android:id="@+id/action_settings"
      android:title="@string/action_settings"
      android:orderInCategory="100"
      app:showAsAction="never" />

    <item android:id="@+id/action_help_table"
          android:title="@string/Help"
          android:orderInCategory="200"
          app:showAsAction="never" />
</menu>

<!--<item android:id="@+id/action_share"
      android:title="@string/action_share"
      android:orderInCategory="5"
      app:showAsAction="never"
      app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>-->
